--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
 					</ul>
 				</div>
 			</div>
+			
+			<div class="row" id="screencast">
+				<div class="fivecol intro">
+					<h3>Screencast.</h3>
+				</div>
+				
+				<div class="sevencol last details">
+					<iframe src="http://player.vimeo.com/video/24061148?title=0&amp;byline=0&amp;portrait=0" width="681" height="426" frameborder="0"></iframe>
+				</div>
+			</div>
 
 			<div class="row" id="install">
 				<div class="fivecol intro">
@@ -88,5 +98,7 @@
 		</footer>
 		
 	</div>
+	<script src="javascripts/jquery.js" type="text/javascript"></script>
+	<script src="javascripts/main.js" type="text/javascript"></script>
 </body>
 </html>
