--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		</footer>
 		
 	</div>
-	<script src="javascripts/jquery.js" type="text/javascript"></script>
-	<script src="javascripts/main.js" type="text/javascript"></script>
+	<script src="./javascripts/jquery.js" type="text/javascript"></script>
+	<script src="./javascripts/main.js" type="text/javascript"></script>
 </body>
 </html>
