Added repo link

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 						<a href="https://github.com/evanwalsh/clovrr/zipball/v1.0" id="download">Download v1.0 (.zip)</a> or
 						<a href="https://github.com/evanwalsh/clovrr/zipball">Download the in-development version</a>.
 					</div>
+					<p>Also, you can check out the <a href="http://github.com/evanwalsh/clovrr">GitHub repository</a> to view the in-dev code.</p>
 				</div>
 			</div>
 			
